--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==2.1.0
 Django==4.2.4
 django-import-export==4.0.0
 django-js-asset==2.1.0
+django-admin-interface==0.28.8
 gunicorn==21.2.0
 packaging==23.1
 psycopg2==2.9.7
